--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <!-- Aqui es donde se renderiza el componente principal de angular -->
+  <!-- Es es el selector de app.component.ts -->
+  <!-- Indica que debe pintar el app.component.ts declarado en el @Component -->
   <app-root></app-root>
 </body>
 </html>
